ontologies in repos to point to file in github

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -403,7 +403,7 @@ $( document ).ready(function() {
 		    	//newly added
 		    	//bodypanel.html(temp+
 		    	temp = temp +
-		    	    "<div class='ontology col-md-3 col-xs-3'>"+ontologies[o].ontology.substr(1)+"</div>"+
+		    	    "<div class='ontology col-md-3 col-xs-3'><a href='https://github.com/"+current_url+"/blob/master"+ontologies[o].ontology+"'>"+ontologies[o].ontology.substr(1)+"</a></div>"+
                         '<div class="col-md-2 col-xs-2">'+
 		    			    '<input type="checkbox" class=" " name="'+ontologies[o].ontology+'-ar2dtool" '+ar2dtool_checked+'>'+
 		    			'</div>'+
