fix the style with reserver names and w3id

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
      <script src="{{MEDIA_URL}}js/bootstrap.min.js"></script-->
 
     <style>
+        .color0back{background-color: #000000 !important;}
+        .color0{color: #000000 !important;}
         .color1back{background-color: #3498DB !important;}
         .color1{color: #3498DB !important;}
         .color2{color: #1d63db !important;}
@@ -29,8 +31,17 @@
         .color5back{background-color: #D6EAF8 !important;}
         .color6{ color: #EBF5FB !important;}
         .color6back{background-color: #EBF5FB !important;}
+        .color7{color: #d9edf7 !important;}
+        .color7back{background-color: #d9edf7 !important;}
+        .color8{color: #337ab7 !important;}
+        .color8back{background-color: #337ab7 !important;}
+
+        .red1{color: #f2dede !important;}
+        .red1back{background-color: #f2dede !important;}
+
         .red{color: #FF0000 !important;}
         .redback{background-color: #FF0000 !important;}
+
         .blueback{background-color: #0000FF !important;}
         .greenback{background-color: #00FF00 !important;}
         .highl{background-color: #FBFBFB; color: #333333;}
