removed preserver names table from profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -481,29 +481,29 @@ $( document ).ready(function() {
 </script>
 
 <br>
-<div class="col-md-offset-1 col-md-10">
-    <table class="table">
-        <tr>
-            <!--
-            <th align="center" style="text-align: center;">Reserved Names</th>
-            -->
-            <th>Reserved Names</th>
-            <th>Repository</th>
-            <th>Ontology</th>
-            <th>w3id URL</th>
-        </tr>
-        {%for p in pnames%}
-        <tr>
-            <td><a href="/publish/{{p.name}}">{{p.name}}</a></td>
-            <td>{{p.repo.url}}</td>
-            <td>{{p.ontology}}</td>
-            <td><a href="https://w3id.org/def/{{p.name}}">https://w3id.org/def/{{p.name}}</a>
-                <a href="/profile?delete-name={{p.name}}"><span class="glyphicon glyphicon-remove pull-right"></span></a>
-            </td>
-        </tr>
-        {%endfor%}
-    </table>
-</div>
+<!--<div class="col-md-offset-1 col-md-10">-->
+    <!--<table class="table">-->
+        <!--<tr>-->
+            <!--&lt;!&ndash;-->
+            <!--<th align="center" style="text-align: center;">Reserved Names</th>-->
+            <!--&ndash;&gt;-->
+            <!--<th>Reserved Names</th>-->
+            <!--<th>Repository</th>-->
+            <!--<th>Ontology</th>-->
+            <!--<th>w3id URL</th>-->
+        <!--</tr>-->
+        <!--{%for p in pnames%}-->
+        <!--<tr>-->
+            <!--<td><a href="/publish/{{p.name}}">{{p.name}}</a></td>-->
+            <!--<td>{{p.repo.url}}</td>-->
+            <!--<td>{{p.ontology}}</td>-->
+            <!--<td><a href="https://w3id.org/def/{{p.name}}">https://w3id.org/def/{{p.name}}</a>-->
+                <!--<a href="/profile?delete-name={{p.name}}"><span class="glyphicon glyphicon-remove pull-right"></span></a>-->
+            <!--</td>-->
+        <!--</tr>-->
+        <!--{%endfor%}-->
+    <!--</table>-->
+<!--</div>-->
 
 
 <p class="red">{{error}}</p>
