change all abs dirs to rel dir in views.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -220,7 +220,7 @@
             <div class="col-md-5 " style="height: 100px;">
                 <a href="/">
                     <h3 class="masthead-brand "><img height="70px"
-                                                    src="https://raw.githubusercontent.com/OnToology/OnToology/master/ontoology.png"/>
+                                                    src="media/icons/ontoology.png"/>
                     </h3>
                 </a>
             </div>
