--- a/templates/profile.html
+++ b/templates/profile.html
@@ -635,7 +635,7 @@ function toggleChevron(e) {
 
 
 $(document).on('click', ".firsttime", function(){
-		alert("This is the first time");
+		//alert("This is the first time");
 		$(this).removeClass("firsttime");
 		$(this).find(".repo").click();
 		$(this).find(".glyphicon-chevron-down").click();
